Major commit, implemented most of the logic, code refactored, fxcommons upgraded to v0.1.2

--- a/resources/fieldreflector/localization/locales.properties
+++ b/resources/fieldreflector/localization/locales.properties
@@ -1,8 +1,25 @@
 frame.main.title=Field Reflector
 dialog.about.title=About Field Reflector
 dialog.about.contenttext=Field Reflector application ver. 1.0, author: Egor Poryadin. Minsk, 2018.
+dialog.addclass.title=Add Class
+dialog.addclass.contenttext=Enter a valid class name (must be full qualified if not located in java.lang package)
+dialog.error.title=Error!
+dialog.error.illegalaccessexc.text=An IllegalAccessException was thrown while trying to perform an operation
+dialog.error.classnotfoundexc.text=Class for such name was not found
+dialog.error.instantiationexc.text=An Exception was thrown while instantiating class
+dialog.error.conversion.text=Unable to convert value to the proper type, please ensure that you use the correct syntax
+label.classes=Classes
+button.addclass=Add Class...
+button.newinstance=New instance
+table.column.name=Name
+table.column.type=Type
+table.column.value=Value
+table.cell.notaccessible=not accessible
 menu.file=File
+menu.file.changelanguage=Change language...
 menu.file.quit=Quit
 menu.edit=Edit
+menu.edit.addclass=Add Class...
+menu.edit.newinstance=New instance
 menu.help=Help
 menu.help.about=About...
