FxCommons upgraded to 0.1.3, implemented language change logic

--- a/resources/fieldreflector/localization/locales_en_US.properties
+++ b/resources/fieldreflector/localization/locales_en_US.properties
@@ -8,6 +8,10 @@ dialog.error.illegalaccessexc.text=An IllegalAccessException was thrown while tr
 dialog.error.classnotfoundexc.text=Class for such name was not found
 dialog.error.instantiationexc.text=An Exception was thrown while instantiating class
 dialog.error.conversion.text=Unable to convert value to the proper type, please ensure that you use the correct syntax
+dialog.languagechange.title=Change language
+dialog.languagechange.text=Select language from the list
+dialog.button.ok=OK
+dialog.button.cancel=Cancel
 label.classes=Classes
 button.addclass=Add Class...
 button.newinstance=New instance
